# surgical_robot

./: .vscode-ctags  CMakeLists.txt  README.md  install.sh  package.xml  run.sh
config/models/arm/: model.sdf
config/models/x500/: model.config  model.sdf
config/models/x500_base/: model.sdf
config/worlds/: surgical_drone_world.sdf
launch/: Untitled  ros_gz_bridge.launch.py  server.config  sim.launch.py  test-scene.launch.py
scripts/: path_publisher.py
src/: #vision_processing_base.cpp#  .visual_follow_me.cpp.swp  gimbal.hpp  motion_planner.hpp  vision_processing_base.cpp  vision_processing_base.hpp  visual_follow_me.cpp
