<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surgical_drone</name>
  <version>0.1.0</version>
  <description>Drone with 2-7dof arms </description>
  <maintainer email="abhishekchoithani24@gmail.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>px4_msgs</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
